fixed z-index issue with navigation and hero text

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -155,7 +155,7 @@ main{
 header{
     border-top: 8.5px solid $illiniOrange;
     position: relative;
-    z-index: 30;
+    z-index: 29;
     width:100%;
     div.title-section{
         .icon-title{
